# Disk-Simulator

./: CMakeLists.txt  README.txt  fcfs.x  inputRequestFromGeeks.txt  inputRequestPickUp.txt  inputRequestPickUp2.txt  inputRequestRandom.txt  inputRequestSTQueue.txt  inputRequests.txt  inputRequestsFCFS.txt
CLook_Queue/: CLookQueue.cpp  CLookQueue.h  CLookQueueNode.cpp  CLookQueueNode.h  main.cpp
CommonFiles/: Queue.hpp  Request.cpp  Request.hpp
Event_Driver/: EventNode.hpp
FCFS_Queue/: FCFSQueue.cpp  FCFSQueue.hpp  FCFSQueueNode.cpp  FCFSQueueNode.hpp  main.cpp
Look_Queue/: LookQueue.cpp  LookQueue.h  LookQueueNode.cpp  LookQueueNode.h  main.cpp
PickUp_Queue/: PickUpQueue.cpp  PickUpQueue.hpp  PickUpQueueNode.cpp  PickUpQueueNode.hpp  main.cpp
ST_Queue/: STQueue.cpp  STQueue.hpp  STQueueNode.cpp  STQueueNode.hpp  main.cpp
